Moved Index to the document store