@@ -21,10 +21,7 @@ import org.junit.Assert;
 import org.junit.Test;
 import stroom.dictionary.DictionaryStore;
 import stroom.dictionary.shared.DictionaryDoc;
-import stroom.entity.shared.DocRefUtil;
-import stroom.index.IndexService;
-import stroom.index.shared.FindIndexCriteria;
-import stroom.index.shared.Index;
+import stroom.index.IndexStore;
 import stroom.query.api.v2.DocRef;
 import stroom.query.api.v2.ExpressionOperator;
 import stroom.query.api.v2.ExpressionOperator.Op;
@@ -53,7 +50,7 @@ public class TestInteractiveSearch extends AbstractSearchTest {
     @Inject
     private CommonIndexingTest commonIndexingTest;
     @Inject
-    private IndexService indexService;
+    private IndexStore indexStore;
     @Inject
     private DictionaryStore dictionaryStore;
     @Inject
@@ -421,7 +418,7 @@ public class TestInteractiveSearch extends AbstractSearchTest {
                 resultMapConsumer,
                 1,
                 1,
-                indexService);
+                indexStore);
     }
 
     private void testEvents(final ExpressionOperator.Builder expressionIn, final int expectResultCount) {
@@ -429,11 +426,10 @@ public class TestInteractiveSearch extends AbstractSearchTest {
         StroomProperties.setOverrideProperty("stroom.search.shard.concurrentTasks", "1", StroomProperties.Source.TEST);
         StroomProperties.setOverrideProperty("stroom.search.extraction.concurrentTasks", "1", StroomProperties.Source.TEST);
 
-        final Index index = indexService.find(new FindIndexCriteria()).getFirst();
-        Assert.assertNotNull("Index is null", index);
-        final DocRef dataSourceRef = DocRefUtil.create(index);
+        final DocRef indexRef = indexStore.list().get(0);
+        Assert.assertNotNull("Index is null", indexRef);
 
-        final Query query = new Query(dataSourceRef, expressionIn.build());
+        final Query query = new Query(indexRef, expressionIn.build());
 
         final CountDownLatch complete = new CountDownLatch(1);
 
