@@ -22,9 +22,9 @@ import org.junit.Test;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import stroom.entity.shared.DocRefUtil;
-import stroom.index.IndexService;
+import stroom.index.IndexStore;
 import stroom.index.shared.FindIndexCriteria;
-import stroom.index.shared.Index;
+import stroom.index.shared.IndexDoc;
 import stroom.query.api.v2.DocRef;
 import stroom.query.api.v2.ExpressionOperator;
 import stroom.query.api.v2.ExpressionTerm.Condition;
@@ -56,7 +56,7 @@ public class TestTagCloudSearch extends AbstractSearchTest {
     @Inject
     private CommonIndexingTest commonIndexingTest;
     @Inject
-    private IndexService indexService;
+    private IndexStore indexStore;
 
     @Override
     public void onBefore() {
@@ -70,9 +70,9 @@ public class TestTagCloudSearch extends AbstractSearchTest {
     public void test() {
         final String componentId = "table-1";
 
-        final Index index = indexService.find(new FindIndexCriteria()).getFirst();
+        final DocRef indexRef = indexStore.list().get(0);
+        final IndexDoc index = indexStore.readDocument(indexRef);
         Assert.assertNotNull("Index is null", index);
-        final DocRef dataSourceRef = DocRefUtil.create(index);
 
         // Create text field.
         final Field fldText = new Field.Builder()
@@ -93,7 +93,7 @@ public class TestTagCloudSearch extends AbstractSearchTest {
         final TableSettings tableSettings = new TableSettings(null, Arrays.asList(fldText, fldCount), true, resultPipeline, null, null);
 
         final ExpressionOperator.Builder expression = buildExpression("user5", "2000-01-01T00:00:00.000Z", "2016-01-02T00:00:00.000Z");
-        final Query query = new Query(dataSourceRef, expression.build());
+        final Query query = new Query(indexRef, expression.build());
 
         final ResultRequest tableResultRequest = new ResultRequest(componentId, Collections.singletonList(tableSettings), null, null, ResultRequest.ResultStyle.TABLE, Fetch.CHANGES);
 
